# SystemC_Module

./: Final_SystemC.sln  README.md
Final_SystemC/: A.cpp  A.h  B.h  CMakeLists.txt  Final_SystemC.cpp  Final_SystemC.vcxproj  Final_SystemC.vcxproj.filters  TestBench.cpp  top.cpp  top.h
Final_SystemC/x64/Debug/: Final_SystemC.exe.recipe
Final_SystemC/x64/Debug/Final_SystemC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Final_SystemC.lastbuildstate  Final_SystemC.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Final_SystemC.exp  Final_SystemC.lib
